clusters/wrtk8s/frigate/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-tailscale
  namespace: frigate
spec:
  ingressClassName: tailscale
  rules:
    - host: frigate
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frigate
                port:
                  number: 80
  tls:
    - hosts:
        - frigate
